# openlibrary-client

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: lint_python.yml  pre-commit.yml  test_python.yml
examples/marc/: bin_marc.mrc  bin_marc_unicode.mrc  line_marc.txt  line_marc_unicode.txt  line_marc_unicode2.txt  marc.xml
examples/scripts/: adding_a_new_book.py  making_a_bot.py
examples/xisbn/: 0140551042_xisbn.json
olclient/: __init__.py  book.py  bots.py  cli.py  common.py  config.py  imports.py  marc.py  openlibrary.py  utils.py
olclient/entity_helpers/: work.py
olclient/helper_classes/: results.py
olclient/schemata/: author.schema.json  edition.schema.json  import.schema.json  shared_definitions.json  tag.schema.json  work.schema.json
tests/: conftest.py  test_batch_submit.py  test_book.py  test_bots.py  test_imports.py  test_marc.py  test_openlibrary.py  test_utils.py
tests/integration/: test_fetch.py  test_save.py
tests/schemata/: test_import_schema.py
